--- a/.github/workflows/website-analyzer.yml
+++ b/.github/workflows/website-analyzer.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Install dependencies
       run: uv pip install --system -r requirements.txt
       
+    - name: Install Playwright browsers
+      run: playwright install chromium
+      
     - name: Set up Git
       run: |
         git config --global user.name 'GitHub Actions Bot'
