--- a/.github/workflows/website-analyzer.yml
+++ b/.github/workflows/website-analyzer.yml
@@ -20,6 +20,8 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout repository
